Different method for coverage

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Decrypt secrets
       run: git secret reveal
     - name: Run tests
-      run: swift test -v --enable-code-coverage
+      run: |
+        xcodebuild test -scheme AoC -destination platform="macOS"
     - name: Codecov
       run: bash <(curl -s https://codecov.io/bash)
